Add GitHub, Discord links and Google Analytics

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ env/
 
 # Internal documents (not for public)
 *.internal.md
+docs/DEPLOYMENT.md
 
 # Data files (generated, not source)
 data/*.json
